# src/routes/privateRoutes.ts
@@ -2,6 +2,7 @@ import {
   NextFunction, Router, Request, Response,
 } from 'express';
 import fields from './fields';
+import skill from './skills';
 import auth from './auth';
 
 const router = Router();
@@ -18,5 +19,6 @@ router.use((req: Request, res: Response, next: NextFunction) => {
 router.use(auth.private);
 
 router.use('/field', fields.private);
+router.use('/skill', skill.private);
 
 export default router;
